--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-boost": "^0.1.22",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.0",
+    "graphql": "^14.0.2",
     "react": "^16.13.1",
+    "react-apollo": "^2.3.2",
     "react-dom": "^16.13.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.1"
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.1",
+    "websocket-extensions": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +40,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chokidar": "^2.0.4",
+    "connect-history-api-fallback": "^1.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "faker": "^4.1.0",
+    "json-server": "^0.16.1",
+    "jsonwebtoken": "^8.1.1",
+    "npm-run-all": "^4.1.3",
+    "yargs-parser": "^18.1.3"
   }
 }
